--- a/preface.tex
+++ b/preface.tex
@@ -278,10 +278,10 @@ Cependant l'approche combinée apporte de meilleure résultats dans le nombre to
 %La réponse est positive grâce à l'introduction des symétries locales. 
 
 \chapter*{Abstract}
-Nowadays, logic is omnipresent and it is used in different domains such as logic optimization, test pattern generation, formal verification and functional simulation, etc
+Nowadays, logic is omnipresent and it is used in different domains such as logic optimization, test pattern generation, formal verification and functional simulation, etc.
 One method to solve this kind of problem is satisfiability problem (SAT).
 SAT solvers are more and more powerful and can handle large problems which seemed to be infeasible 
 few years ago. However, some problems present symmetries which force the solver to explore fruitlessly
 the symmetric part of the search space and hinders the performance. 
-In this thesis, we set out to exploit symmetry properties of the problems in better way.
-For this purpose, we create two majors contributions that aims to improve the state-of-the-art techniques and augment the number of solved instances. With an evaluation over the instances presented in the SAT competition, we show that our approach overcomes the state-of-the-art one and allow to solve more instances. 
+In this thesis, we set out to exploit symmetry properties of the problems in better ways.
+For this purpose, we propose two major contributions that aims to improve the state-of-the-art techniques and augment the number of solved instances. With an evaluation over the instances presented in the SAT competition, we show that our approach overcomes the state-of-the-art ones as it is able to solve more instances. 
