--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@ outer=3.8cm, % Outer margin
 
 %%% Comments ==================================================================
 \newboolean{showcomments}
-\setboolean{showcomments}{false}
+\setboolean{showcomments}{true}
 
 \ifthenelse{\boolean{showcomments}}
            {\overfullrule=1cm
