--- a/title.tex
+++ b/title.tex
@@ -28,7 +28,7 @@
   \textbf{\Large{}\color{phdcol0}Exploitation des symétries dynamiques pour
     la résolution des problèmes SAT}
   \vspace{1cm}\\
-  Soutenue le :
+  Soutenue le : 18 décembre 2019
   \vspace{.2cm}\\
   Devant le jury composé de :
 }
@@ -39,7 +39,7 @@
   \textit{Examinateurs :} & \textsc{Jean-Michel	Couvreur}  & Professeur, Université d'Orléans\\
                           & \textsc{Emanuelle Encrenaz}  & Maître de conférences, Sorbonne Université\\
                           & \textsc{Bart Bogoerts}  & Assistant Professor, Vrije Universiteit Brussel\\
-                          & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
+\textit{Directeurs :}    & \textsc{Souheib Baarir}  & Maître de conférences, Université Paris Nanterre\\
                           & \textsc{Fabrice Kordon}  & Professeur, Sorbonne Université\\
 \end{tabular}\\
 \tikz[remember picture]\node (titleborderdown) {};
