--- a/introduction.tex
+++ b/introduction.tex
@@ -157,8 +157,9 @@ This thesis addresses the challenge of optimizing the solving of a SAT problem i
 symmetries. In detail, my research exploits symmetry breaking during the solving.
 %Understanding state-of-the-art techniques allows us to improve it.
 It provides two major contributions. The first one uses the strengths of static symmetry 
-breaking approach and applied it dynamically to avoid the drawbacks of the approach. It adds an opportunistic symmetry controller that avoids visiting symmetric part of the search spaces. Benchmarks show that this makes it possible
- to solve very difficult symmetric problems.
+breaking approach and applied it dynamically to avoid the drawbacks of the approach. 
+It adds an opportunistic symmetry controller that avoids visiting symmetric part of the search spaces.
+ Benchmarks show that this makes it possible to solve very difficult symmetric problems.
 The second contribution uses the previous one and combines it with state-of-the-art dynamic 
 symmetry breaking approach and so takes the best of two worlds. This combination leads to 
 important theoretical step for the usage of \emph{partial symmetry breaking} with the usage of 
@@ -182,8 +183,9 @@ an overview of which will be presented. Finally, with the presence of multi
 core machines, an overview of the state-of-the-art parallel SAT solving are presented.
 
 \textbf{Symmetries and SAT}
-The goal of \Cref{chap:symmetryinsat} is to better understand what is a symmetry. 
-It requires an understanding of the group theory, and the notation used in the rest of the manuscript.
+The goal of \Cref{chap:symmetryinsat} is to better understand what is a symmetry and its usage
+in the SAT context. For this purpose, we first present group theory and the notation used
+in the rest of the manuscript.
 This chapter also presents the process to find the (syntactic) symmetries of a SAT problem.
  This computation involves the creation of a graph from the problem and the computation of an
 automorphism tool. After obtaining the symmetries, the second part presents how to
@@ -193,6 +195,7 @@ Static symmetry breaking is so far the most popular approach to take advantage o
 Dynamic symmetry breaking exploits the symmetries during the computation of the SAT solver to accelerate the
 tree traversal of the SAT solver using symmetrical facts or avoids symmetric configurations like in the 
 static approach.
+
 \textbf{Between Static and Dynamic}
 \Cref{chap:symmSAT} describes our efficient dynamic symmetry breaking approach.
 The first part explains our algorithm, a new way to handle symmetries that avoid the main problem
