--- a/cosy.tex
+++ b/cosy.tex
@@ -1,4 +1,4 @@
-﻿\chapter{SymmSAT: Between Static and Dynamic\\ Symmetry Breaking}\label{chap:symmSAT}
+\chapter{SymmSAT: Between Static and Dynamic\\ Symmetry Breaking}\label{chap:symmSAT}
 \minitoc
 This chapter presents our first contribution published in TACAS 2018 conference~\ref{algorithm:cdcl_cosy}. 
 \section{General idea}
@@ -92,7 +92,7 @@ x_4, \neg x_4\}$ and following the Definition \ref{def:eta}, we can deduce than 
  $g.\beta < \beta$. \end{proof}
 \medskip\noindent It is important to observe that the notion of \textit{ebsp}
 is a refinement of the classical concept of \textit{sbp} defined in \cite{aloul06}. Specifically, like \textit{sbp}, \textit{esbp} preserve satisfiability.
-\clearpage 
+
 \begin{theorem}[Satisfiability preservation]
  Let $\varphi$ be a formula and $\psi$ an \textit{esbp} for some assignment $\alpha$ under $g \in G_{\varphi}$. Then,
  $$\varphi~and ~\varphi \wedge \psi \text{ are equi-satisfiable}.$$
