--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage[a4paper,     inner=3cm, % Inner margin
 outer=3.8cm, % Outer margin
 ]{geometry}
-\linespread{1.15}
+\linespread{1.2}
 \usepackage{minitoc} 
 \usepackage[utf8]{inputenc}
 \usepackage{tabularx}
@@ -93,7 +93,7 @@ outer=3.8cm, % Outer margin
 
 %%% Comments ==================================================================
 \newboolean{showcomments}
-\setboolean{showcomments}{true}
+\setboolean{showcomments}{false}
 
 \ifthenelse{\boolean{showcomments}}
            {\overfullrule=1cm
